# flatten_json

./: .gitignore  README.md  pyproject.toml
flatten_json/: flatten_json.py  flatteners.py  solution.py
flatten_json/scripts/: flatten_json.py
